fix logo visible, change default outline style

--- a/src/styles/_button.scss
+++ b/src/styles/_button.scss
@@ -14,4 +14,9 @@
   &:hover {
     background-color: $hover-color;
   }
+
+  &:focus {
+    box-shadow: 0 0 5px $hover-color;
+    opacity: 0.8;
+  }
 }
