--- a/src/styles/_nav.scss
+++ b/src/styles/_nav.scss
@@ -25,10 +25,17 @@
     font-size: 13px;
     letter-spacing: 3px;
     cursor: pointer;
+    border-radius: 8px;
 
     &:hover {
       color: $orange-color;
       transition: color 0.3s;
+    }
+
+    &:focus {
+      box-shadow: 0 0 5px $hover-color;
+      color: $hover-color;
+      opacity: 0.8;
     }
 
     &--active::after {
