--- a/src/styles/_slider.scss
+++ b/src/styles/_slider.scss
@@ -24,6 +24,11 @@
       transform: scale(0.9);
     }
 
+    &:focus {
+      background-color: $blue-color;
+      opacity: 0.8;
+    }
+
     &--backward {
       left: 42px;
     }
